# artemis

./: README.md  pyproject.toml  setup.py
artemis/backend/constant/: rest.py
artemis/backend/core/: kafka.py  postgres.py  redis.py  simplerest.py
tests/: backend.py  kafka_test.py  rest_deps.py  testcontainers_test.py
